tests/expectations/compiler/const_generics/unknown_array_length_fail.out
Error [ETYC0372005]: Unknown variable `N`
    --> compiler-test:2:24
     |
   2 |     fn main(arr: [u32; N], arr2: [u32; N]) {
     |                        ^
Error [ETYC0372005]: Unknown variable `N`
    --> compiler-test:2:40
     |
   2 |     fn main(arr: [u32; N], arr2: [u32; N]) {
     |                                        ^
